# learn2code_1_demo_project

./: .clang-tidy  .gitignore  .gitpod.dockerfile  .gitpod.yml  CMakeLists.txt  Doxyfile  README.md  index.html
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_and_test_code.yml  clang-format_checks.yml  publish_doxygen.yml
code/: CMakeLists.txt  mingw-w64-x86_64.cmake
code/include/: book.h  header.h  library.h  student.h
code/src/: book.c  library.c  main.c  student.c
code/test/: book_test.cpp  library_test.cpp  student_test.cpp
code_4_exam/: CMakeLists.txt
code_4_exam/include/: book.h  library.h  student.h
code_4_exam/src/: book.c  student.c
code_4_exam/test/: library_test.cpp  student_test.cpp
docs/: learn2code_exam_1.md  markdown-pdf.css
